--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
-
-{
-  "name": "resume-roast-app",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest",
-    "openai": "latest"
-  }
+"dependencies": {
+  "tailwindcss": "latest",
+  "autoprefixer": "latest",
+  "postcss": "latest",
+  "next": "latest",
+  "react": "latest",
+  "react-dom": "latest",
+  "openai": "latest"
 }
+
