--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest",
-    "postcss": "latest",
-    "autoprefixer": "latest",
+    "next": "15.4.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "openai": "latest",
     "pdfjs-dist": "latest"
+  },
+  "devDependencies": {
+    "tailwindcss": "4.0.0",
+    "@tailwindcss/postcss": "4.0.0",
+    "postcss": "8.4.41",
+    "autoprefixer": "10.4.20"
   }
 }
