--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "openai": "latest",
-    "pdfjs-dist": "latest"
+    "pdf-parse": "1.1.1"
   },
   "devDependencies": {
     "tailwindcss": "4.0.0",
