--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "openai": "latest",
-    "pdf-parse": "1.1.1"
+    "pdf-parse": "1.1.1",
+    "googleapis": "^133.0.0"
   },
   "devDependencies": {
     "tailwindcss": "4.0.0",
@@ -20,3 +21,4 @@
     "autoprefixer": "10.4.20"
   }
 }
+
